<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?colorSurface"
    android:padding="@dimen/size_s"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/confirmation_image_view"
        android:layout_margin="@dimen/size_s"
        android:paddingTop="@dimen/size_s"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textAppearance="?textAppearanceBody1"
        android:layout_margin="@dimen/size_s"
        android:text="@string/include_id_confirmation_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginHorizontal="@dimen/size_s"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            style="@style/Theme.Vouched.Button"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/size_xs"
            android:text="@string/include_id_confirmation_confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_marginStart="@dimen/size_xs"
            style="@style/Theme.Vouched.Button.OutlinedButton"
            android:layout_weight="1"
            android:text="@string/include_id_confirmation_retry_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>