<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#B4000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_timeout"
                android:layout_gravity="center_horizontal"
                android:layout_width="104dp"
                android:layout_height="104dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginVertical="@dimen/size_s"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/size_xs"
                android:textSize="@dimen/size_s"
                android:textColor="@android:color/white"
                android:text="@string/include_timeout_view_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/size_s"
                android:layout_gravity="center_horizontal"
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_timeout_view_try_again_button" />
            <com.google.android.material.button.MaterialButton
                android:layout_gravity="center_horizontal"
                android:id="@+id/manually_option_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_timeout_view_capture_manually_button" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>