<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:fitsSystemWindows="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cropToPadding="false"
        android:paddingBottom="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_welcome_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/ic_logo_white"
        android:padding="82dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white_100"
        android:padding="@dimen/size_xs"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        app:shapeAppearance="@style/ShapeAppearance.Vouched.WelcomeCard">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/size_xs">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_xs"
                android:text="@string/fragment_welcome_menu_welcome_message"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceHeadline5"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/size_xs"
                android:lineHeight="30sp"
                android:text="@string/fragment_welcome_menu_info"
                android:textAlignment="center"
                android:gravity="center"
                android:textAppearance="?textAppearanceSubtitle1"
                android:textColor="?colorOnSurface" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/identity_verification_flow_button"
                style="@style/Theme.Vouched.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/size_xs"
                android:text="@string/fragment_welcome_menu_verification_flow_button" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/reverification_flow_button"
                style="@style/Theme.Vouched.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/fragment_welcome_menu_reverification_flow_button" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>